[package]
name = "djinn"
version = "0.0.1"
authors = ["Francis Tseng <f@frnsys.com>"]

[dependencies]
rustc-serialize = "*"
rmp = "*"
rmp-serialize = "*"
redis = "0.8.0"
ws = "*"
uuid = { version = "0.2", features = ["v4", "rustc-serialize"] }
cpython = { git = "https://github.com/dgrunwald/rust-cpython.git" }
time = "*"
fnv = "*"
rand = "*"

[dev-dependencies]
time = "*"
redis-cluster = { git = "https://github.com/frnsys/redis-cluster.rs.git" }
yaml-rust = "*"